--- a/MqttClient/FeedForm.resx
+++ b/MqttClient/FeedForm.resx
@@ -312,6 +312,9 @@
         d6vuWN21unO3uzsZa/Wdbf8f8I9t2r7FX80AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="serialPort.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAgIAAAAEAIAAoCAEAFgAAACgAAACAAAAAAAEAAAEAIAAAAAAAAAgBAAAAAAAAAAAAAAAAAAAA
